--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 dialoguer = "0.10.3"
 eyre = "0.6.8"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
