--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 dialoguer = "0.10.3"
 eyre = "0.6.8"
+home = "0.5.4"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
