--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ eyre = "0.6.8"
 home = "0.5.4"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+thiserror = "1.0.38"
