--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,13 @@
 name = "obs"
 version = "0.1.0"
 edition = "2021"
+authors = ["kootsZhin <kootsZhin@proton.me>"]
+description = "A blasting fast & lightweight CLI tool for interacting with the Obsidian vaults"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.6", features = ["derive"] }
 dialoguer = "0.10.3"
 eyre = "0.6.8"
 home = "0.5.4"
