--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "obs"
 version = "0.1.0"
 edition = "2021"
 authors = ["kootsZhin <kootsZhin@proton.me>"]
-description = "A blasting fast & lightweight CLI tool for interacting with the Obsidian vaults"
+description = "A blazing fast & lightweight CLI tool for interacting with the Obsidian vaults"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
