--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["kootsZhin <kootsZhin@proton.me>"]
 description = "A blazing fast & lightweight CLI tool for interacting with the Obsidian vaults"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
